--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "author": "Arkar Min Tun",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0"
   },
